[gd_scene load_steps=2 format=2]

[ext_resource path="res://Defence/BaseTurrets/Turret.gd" type="Script" id=1]

[node name="BaseTurret" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Turret_Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Turret_Vision"]
polygon = PoolVector2Array( 5, 0, 5, -300, 77, -290, 150, -260, 212, -211, 260, -150, 290, -77, 300, 0, 290, 77, 260, 150, 212, 211, 150, 260, 79, 290, 5, 300 )

[node name="TargetListTimer" type="Timer" parent="."]
autostart = true

[node name="ShootFX" type="AudioStreamPlayer2D" parent="."]

[node name="RepairFX" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_exited" from="Turret_Vision" to="." method="_on_Turret_Vision_body_exited"]
[connection signal="timeout" from="TargetListTimer" to="." method="_on_TargetListTimer_timeout"]
